| Summary: | ASTERISK-29730: Segfault in __ao2_ref if refdebug = yes | ||
| Reporter: | Alexei Gradinari (alexei gradinari) | Labels: | |
| Date Opened: | 2021-11-09 16:56:02.000-0600 | Date Closed: | 2021-11-19 09:05:28.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/General |
| Versions: | 16.22.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | segfault in __ao2_ref
astobj2.c:658 if (ref_log && !(obj->priv_data.options & AO2_ALLOC_OPT_NO_REF_DEBUG)) { but obj is already freed at line 642 ast_free(obj); | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-11-09 16:56:03.265-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-11-19 09:05:30.479-0600 Change 17501 merged by Friendly Automation: astobj2.c: Fix core when ref_log enabled [https://gerrit.asterisk.org/c/asterisk/+/17501|https://gerrit.asterisk.org/c/asterisk/+/17501] By: Friendly Automation (friendly-automation) 2021-11-19 09:06:04.174-0600 Change 17551 merged by Friendly Automation: astobj2.c: Fix core when ref_log enabled [https://gerrit.asterisk.org/c/asterisk/+/17551|https://gerrit.asterisk.org/c/asterisk/+/17551] By: Friendly Automation (friendly-automation) 2021-11-19 09:54:11.549-0600 Change 17552 merged by Joshua Colp: astobj2.c: Fix core when ref_log enabled [https://gerrit.asterisk.org/c/asterisk/+/17552|https://gerrit.asterisk.org/c/asterisk/+/17552] By: Friendly Automation (friendly-automation) 2021-11-19 09:54:20.354-0600 Change 17550 merged by Joshua Colp: astobj2.c: Fix core when ref_log enabled [https://gerrit.asterisk.org/c/asterisk/+/17550|https://gerrit.asterisk.org/c/asterisk/+/17550] | ||